--- a/404.html
+++ b/404.html
@@ -58,8 +58,8 @@
           <a id="avatar" href="/" target="">
             <img class="img-circle img-rotate" src="https://hseagle.github.io/qiandaohu.png" width="200" height="200">
           </a>
-          <h2 id="name" class="hidden-xs hidden-sm">猩数老怪</h2>
-          <h3 id="title" class="hidden-xs hidden-sm hidden-md">被程序耽误的段子手</h3>
+          <h2 id="name" class="hidden-xs hidden-sm">数据猿</h2>
+          <h3 id="title" class="hidden-xs hidden-sm hidden-md">被程序截胡的段子手</h3>
           <small id="location" class="text-muted hidden-xs hidden-sm"><i class="icon icon-map-marker"></i>Shanghai, China</small>
         </div><div class="search" id="search-form-wrap">
     <form class="search-form sidebar-form">
