--- a/404.html
+++ b/404.html
@@ -58,8 +58,8 @@
           <a id="avatar" href="/" target="">
             <img class="img-circle img-rotate" src="https://hseagle.github.io/qiandaohu.png" width="200" height="200">
           </a>
-          <h2 id="name" class="hidden-xs hidden-sm">数据猿</h2>
-          <h3 id="title" class="hidden-xs hidden-sm hidden-md">被程序截胡的段子手</h3>
+          <h2 id="name" class="hidden-xs hidden-sm">被程序截胡的段子手</h2>
+          <h3 id="title" class="hidden-xs hidden-sm hidden-md"></h3>
           <small id="location" class="text-muted hidden-xs hidden-sm"><i class="icon icon-map-marker"></i>心之所向，身之所往</small>
         </div><div class="search" id="search-form-wrap">
     <form class="search-form sidebar-form">
@@ -336,7 +336,7 @@ function tagCloud(where, min, max) {
         </a>
       </div>
       <div class="media-body">
-        <h3 class="media-heading"><a href="/" target="_blank"><span class="text-dark">数据猿</span><small class="ml-1x">被程序截胡的段子手</small></a></h3>
+        <h3 class="media-heading"><a href="/" target="_blank"><span class="text-dark">被程序截胡的段子手</span><small class="ml-1x"></small></a></h3>
         <div>非典型文青</div>
       </div>
     </figure>
